--- a/importapp/templates/base.html
+++ b/importapp/templates/base.html
@@ -38,6 +38,9 @@
   <link rel="stylesheet" href="{% static 'css/sweetalert2.min.css' %}">
 
   <style>
+    .lan_active {
+      font-weight: 600;
+    }
     @media all and (min-width: 992px) {
 	.dropdown-menu li{ position: relative; 	}
 	.nav-item .submenu{ 
