--- a/importapp/templates/index.html
+++ b/importapp/templates/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="banner__carousel-content d-flex flex-column align-items-center">
           <h1 class="banner__carousel-title text-uppercase text-white text-center">
-            {% if language == 'uz' %}SXBteams - Eksport va importni qo'llab-quvvatlash{% elif language == 'en' %}SXBteams - Export and import support{% else %}SXBteams — поддержка экспорта и импорта{% endif %}
+            {% if language == 'uz' %}BESHAGRO EKSPORT - Eksport va importni qo'llab-quvvatlash{% elif language == 'en' %}BESHAGRO EKSPORT - Export and import support{% else %}BESHAGRO EKSPORT — поддержка экспорта и импорта{% endif %}
           </h1>
           <button class="btn btn-primary banner__carousel-btn" data-bs-toggle="modal"
             data-bs-target="#staticBackdrop">{% if language == 'uz' %}So'rov jo'natish{% elif language == 'en' %}Send a request{% else %}Отправить запрос{% endif %}</button>
@@ -34,7 +34,7 @@
         </div>
         <div class="banner__carousel-content d-flex flex-column align-items-center">
           <h1 class="banner__carousel-title text-uppercase text-white text-center">
-            {% if language == 'uz' %}SXBteams - Eksport va importni qo'llab-quvvatlash{% elif language == 'en' %}SXBteams - Export and import support{% else %}SXBteams — поддержка экспорта и импорта{% endif %}
+            {% if language == 'uz' %}BESHAGRO EKSPORT - Eksport va importni qo'llab-quvvatlash{% elif language == 'en' %}BESHAGRO EKSPORT - Export and import support{% else %}BESHAGRO EKSPORT — поддержка экспорта и импорта{% endif %}
           </h1>
           <button class="btn btn-primary banner__carousel-btn" data-bs-toggle="modal"
             data-bs-target="#staticBackdrop">{% if language == 'uz' %}So'rov jo'natish{% elif language == 'en' %}Send a request{% else %}Отправить запрос{% endif %}</button>
@@ -49,7 +49,7 @@
         </div>
         <div class="banner__carousel-content d-flex flex-column align-items-center">
           <h1 class="banner__carousel-title text-uppercase text-white text-center">
-            {% if language == 'uz' %}SXBteams - Eksport va importni qo'llab-quvvatlash{% elif language == 'en' %}SXBteams - Export and import support{% else %}SXBteams — поддержка экспорта и импорта{% endif %}
+            {% if language == 'uz' %}BESHAGRO EKSPORT - Eksport va importni qo'llab-quvvatlash{% elif language == 'en' %}BESHAGRO EKSPORT - Export and import support{% else %}BESHAGRO EKSPORT — поддержка экспорта и импорта{% endif %}
           </h1>
           <button class="btn btn-primary banner__carousel-btn" data-bs-toggle="modal"
             data-bs-target="#staticBackdrop">{% if language == 'uz' %}So'rov jo'natish{% elif language == 'en' %}Send a request{% else %}Отправить запрос{% endif %}</button>
@@ -64,7 +64,7 @@
         </div>
         <div class="banner__carousel-content d-flex flex-column align-items-center">
           <h1 class="banner__carousel-title text-uppercase text-white text-center">
-            {% if language == 'uz' %}SXBteams - Eksport va importni qo'llab-quvvatlash{% elif language == 'en' %}SXBteams - Export and import support{% else %}SXBteams — поддержка экспорта и импорта{% endif %}
+            {% if language == 'uz' %}BESHAGRO EKSPORT - Eksport va importni qo'llab-quvvatlash{% elif language == 'en' %}BESHAGRO EKSPORT - Export and import support{% else %}BESHAGRO EKSPORT — поддержка экспорта и импорта{% endif %}
           </h1>
           <button class="btn btn-primary banner__carousel-btn" data-bs-toggle="modal"
             data-bs-target="#staticBackdrop">{% if language == 'uz' %}So'rov jo'natish{% elif language == 'en' %}Send a request{% else %}Отправить запрос{% endif %}</button>
