--- a/importapp/templates/base.html
+++ b/importapp/templates/base.html
@@ -9,19 +9,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="yandex-verification" content="bee6e1fdc413d544" />
   <!-- META TAGS -->
-  <meta name="description" content="Sxbteams - export va importni qo'llab-quvvatlash">
+  <meta name="description" content="BESHAGRO EKSPORT - export va importni qo'llab-quvvatlash">
   <meta name="keywords"
-    content="sxbteams.uz, qovun, tarvuz, ko'mir, sxbteams, export, экспорт, import, импорт, oziq-ovqat, xom-ashyo, фрукты, овощи, qurilish, goods, products">
+    content="beshagroeksport.uz, qovun, tarvuz, ko'mir, beshagroeksport, export, экспорт, import, импорт, oziq-ovqat, xom-ashyo, фрукты, овощи, qurilish, goods, products">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://sxbteams.uz">
-  <meta property="og:title" content="Sxb teams">
-  <meta property="og:description" content="Sxbteams - export va importni qo'llab-quvvatlash">
+  <meta property="og:url" content="https://beshagroeksport.uz">
+  <meta property="og:title" content="BESHAGRO EKSPORT">
+  <meta property="og:description" content="BESHAGRO EKSPORT - export va importni qo'llab-quvvatlash">
   <meta name="google-site-verification" content="y2CyYM7dphADm3I6uqXLn6xtHyysxqawwz65_gdZYZY" />
   {% for image in main_images %}
   <meta property="og:image" content="{{ image.Image.url }}">
   {% endfor %}
-  <title>Sxb teams</title>
-  <link rel="icon" type="image/x-icon" href="{% static 'img/logo3.png' %}">
+  <title>Beshagro eksport</title>
+  <link rel="icon" type="image/x-icon" href="{% static 'img/logo.png' %}">
 
   <!-- FONTAWESOME CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -370,7 +370,7 @@
       </div>
     </div>
     <div class="footer__copy mt-2">
-      <p class="text-center mb-0">{% if language == 'uz' %}'SXBteams' Barcha huquqlar himoyalangan{% elif language == 'en' %}'SXBteams' All rights reserved{% else %}Все права защищены.{% endif %}</p>
+      <p class="text-center mb-0">{% if language == 'uz' %}'BESHAGRO EKSPORT' Barcha huquqlar himoyalangan{% elif language == 'en' %}'BESHAGRO EKSPORT' All rights reserved{% else %}Все права защищены.{% endif %}</p>
     </div>
   </div>
 </footer>
