--- a/importapp/templates/contact.html
+++ b/importapp/templates/contact.html
@@ -28,7 +28,7 @@
     <div class="container">
       <div class="row g-3">
         <div class="col col-12 col-md-5">
-          <h2 class="section-subtitle">“SXBteams”</h2>
+          <h2 class="section-subtitle">“BESHAGRO EKSPORT”</h2>
           <div class="contact__item my-3">
             <label class="contact__label mb-1 d-block">{% if language == 'uz' %}Manzil:{% elif language == 'en' %}Address:{% else %}Адрес:{% endif %}</label>
             <p class="mb-0"><i class="me-3 fas fa-location-dot"></i>{{ contact.Location }}</p>
